<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".RecordNewSales">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_vendor_verify"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_record_new_sales"
                >
                <TextView
                    android:id="@+id/record_sales_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_sales"
                    android:layout_weight="2"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:layout_marginStart="52dp"
                    />
                <TextView
                    android:id="@+id/record_sales_close_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_nav"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="12dp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/record_new_sales_logo"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_record_new_sales_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_recordnewsales"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/record_new_sales_today"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                />

            <TextView
                android:id="@+id/record_new_sales_date_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/muli"
                android:text="@string/record_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/sold_text_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_text_one"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="4dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/muli"
                    />
                <TextView
                    android:id="@+id/sold_text_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_text_two"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="4dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/muli"
                    />
                <EditText
                    android:id="@+id/sold_text_input_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="4dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/muli"
                    android:autofillHints=""
                    android:hint="@string/cd_edit_text_hint"
                    />
                <TextView
                    android:id="@+id/sold_text_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_text_three"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="4dp"
                    android:textSize="24sp"
                    android:fontFamily="@font/muli"
                    />




            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/sold_text_nescafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sold_text_nescafe"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textSize="24sp"
                android:fontFamily="@font/muli"
                />

            <Button
                android:id="@+id/add_to_your_record"
                android:layout_marginTop="32dp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/button_text"
                android:textAllCaps="false"
                android:background="@drawable/bg_add_to_your_record"
                android:textColor="@color/button_add_to_your_sales"
                android:layout_gravity="center"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>